<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#37474F"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.harry.physiopolar.com.harry.physiopolar.MainActivity"
    tools:ignore="MergeRootFrame"
    android:textColor="@color/bpmColor">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDevice"
        android:textColor="@color/bpmColor" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bpmColor" />

    <TextView
        android:id="@+id/rpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/rpm"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bpmColor"
        android:textSize="70sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/min"
            android:textColor="@color/bpmColor" />


        <TextView
            android:id="@+id/avg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/avg"
            android:textColor="@color/bpmColor" />

        <TextView
            android:id="@+id/max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/max"
            android:textColor="@color/bpmColor" />
    </LinearLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/dynamicPlot"
        title="Heart Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></com.androidplot.xy.XYPlot>


</LinearLayout>